Prevent scrollbars in widget panel OT-207

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -30,6 +30,7 @@
 }
 body {
   margin: 0;
+  overflow: hidden;
 }
 .inline-widget {
   min-height: 18.5rem; /* 296px */
